# xiaozhi-agent

./: .env.template  .gitignore  .gitmodules  README.md  README_client.md  client.py  pyproject.toml
.cursor/rules/: project.mdc  python.mdc
app/: __init__.py  config.py  main.py
app/agent/: graph.py
app/agent/nodes/: asr.py  iot.py  llm.py  tts.py
app/agent/tools/: iot_tools.py
app/server/: protocol.py  websocket.py
app/services/: asr_service.py  tts_service.py
app/utils/: audio.py  logger.py
docs/: client-websocket.md  server-websocket.md  websocket.md
tests/: __init__.py  test_agent.py
